# finalproject_romanchuk_roman_m25-555-

./: README.md  pyproject.toml
data/: portfolios.json  rates.json  users.json
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py
